--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="ui grid" *ngIf="vaccination" class="item cfy-vaccination-details">
     <div class="twelve wide column">
+      <a [routerLink]="'/vaccinations'" class="back-arrow">
+        <i class="arrow left large icon"></i>
+      </a>
       <h1 class="ui header">Impfung am {{ vaccination.date | date:'dd.MM.yyyy' }}</h1>
 
       <div class="vaccination-info">
@@ -56,8 +59,8 @@
                   </td>
                   <td>
                     <a [routerLink]="['../../user/edit', user?.id]"><i class="pencil alternate icon"></i>
-                      {{user.id}}</a>
-                    <a (click)="removeUser()"><i class="trash alternate icon"></i></a>
+                    </a>
+                    <a (click)="removeUser(user.id)"><i class="trash alternate icon"></i></a>
 
                   </td>
                 </tr>
@@ -76,26 +79,22 @@
     </div>
   </div> <br> <br>
 
-  <button [routerLink]="'/vaccinations'" class="ui crayola cfy-button">
-  Zurück zur Übersicht
-</button>
+
   <!--<button routerLink=".." class="ui crayola cfy-button">
   Zurück zur Übersicht
 </button>-->
 
 
-  <a *ngIf="authService.isLoggedIn() && user?.isAdmin == true" class="ui tiny yellow labeled icon button"
+  <a *ngIf="authService.isLoggedIn() && user?.isAdmin == true" class="ui cfy-button"
     [routerLink]="['../../admin', vaccination?.id]">
     <i class="write icon"></i> Impftermin bearbeiten
   </a>
-  <a *ngIf="authService.isLoggedIn() && user?.isAdmin == true" class="ui tiny red labeled icon button"
-    (click)="removeVaccination()">
+  <a *ngIf="authService.isLoggedIn() && user?.isAdmin == true" class="ui cfy-button" (click)="removeVaccination()">
     <i class="remove icon"></i>
     Löschen
   </a>
 
-  <a *ngIf="authService.isLoggedIn()" class="ui tiny violet labeled icon button"
-    [routerLink]="['../../user', vaccination?.id]">
+  <a *ngIf="authService.isLoggedIn()" class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
     <i class="write icon"></i> Jetzt anmelden
   </a>
 </div>
