--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -95,6 +95,6 @@
   </a>
 
   <a *ngIf="authService.isLoggedIn()" class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
-    <i class="write icon"></i> Jetzt anmelden
+    <i class="plus icon"></i> Jetzt anmelden
   </a>
 </div>
