--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -27,20 +27,23 @@
       errors.date }}</div>
   </div>
 
+  <div class="two fields">
+    <div class="field">
+      <label>Startzeit</label>
+      <input type="time" formControlName="starttime">
+      <div *ngIf="errors.starttime" class="ui negative message">{{
+        errors.starttime }}</div>
+    </div>
 
-  <div class="field">
-    <label>Startzeit</label>
-    <input type="time" formControlName="starttime">
-    <div *ngIf="errors.starttime" class="ui negative message">{{
-      errors.starttime }}</div>
+    <div class="field">
+      <label>Endzeit</label>
+      <input type="time" formControlName="endtime">
+      <div *ngIf="errors.endtime" class="ui negative message">{{
+        errors.endtime }}</div>
+    </div>
   </div>
 
-  <div class="field">
-    <label>Endzeit</label>
-    <input type="time" formControlName="endtime">
-    <div *ngIf="errors.endtime" class="ui negative message">{{
-      errors.endtime }}</div>
-  </div>
+
 
 
 
