--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,39 @@
 <div *ngIf="!isLoggedIn()">
-  <h1>Login</h1>
-  <form class="ui large form" [formGroup]="loginForm" (ngSubmit)="login()">
-    <div class="field">
-      <label>E-Mail</label>
-      <input type="email" id="username" formControlName="username">
-      <div *ngIf="loginForm.get('username').invalid &&
+  <div class="ui grid center">
+    <div class="ten wide column">
+      <h1>Login</h1>
+      <form class="ui large form" [formGroup]="loginForm" (ngSubmit)="login()">
+        <div class="field">
+          <label>E-Mail</label>
+          <input type="email" id="username" formControlName="username">
+          <div *ngIf="loginForm.get('username').invalid &&
 (loginForm.get('username').dirty ||
 loginForm.get('username').touched) &&
 loginForm.get('username').hasError('required')" class="ui negative
 message">
-        Benutzername ist verpflichtend </div>
-      <div *ngIf="loginForm.get('username').invalid &&
+            Benutzername ist verpflichtend </div>
+          <div *ngIf="loginForm.get('username').invalid &&
 (loginForm.get('username').dirty ||
 loginForm.get('username').touched) &&
 loginForm.get('username').hasError('email')" class="ui negative
 message">
-        E-Mail Format überprüfen </div>
-    </div>
-    <div class="field">
-      <label>Passwort</label>
-      <input type="password" formControlName="password">
-      <div *ngIf="loginForm.get('password').invalid &&
+            E-Mail Format überprüfen </div>
+        </div>
+        <div class="field">
+          <label>Passwort</label>
+          <input type="password" formControlName="password">
+          <div *ngIf="loginForm.get('password').invalid &&
 (loginForm.get('password').dirty ||
 loginForm.get('password').touched)" class="ui negative message">
-        Passwort ist verpflichtend </div>
-    </div>
-    <button type="submit" class="ui button"
+            Passwort ist verpflichtend </div>
+        </div>
+        <button type="submit" class="ui cfy-button crayola"
 [disabled]="loginForm.invalid">Login</button>
-  </form>
+      </form>
+    </div>
+  </div>
 </div>
 <div *ngIf="isLoggedIn()">
-  <button type="button" class="ui button"
+  <button type="button" class="ui cfy-button crayola"
 (click)="logout()">Logout</button>
 </div>
