--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -94,7 +94,7 @@
     Löschen
   </a>
 
-  <a *ngIf="authService.isLoggedIn()" class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
+  <a class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
     <i class="plus icon"></i> Jetzt anmelden
   </a>
 </div>
