--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,40 @@
 <div class="ui container">
   <h1>Home</h1>
   <h2 *ngIf="isLoggedIn()">Hallo, {{user?.firstname}} </h2>
+  <div *ngIf="isLoggedIn(); else notLoggedIn">
+    <div *ngIf="user?.vaccination_id != null; else notVaccinated">
+      Du bist bereits zu einer Impfung angemeldet!
+      <p>{{user?.vaccination_id}}</p>
+      <a class="ui crayola cfy-button" [routerLink]="['../vaccinations', user?.vaccination_id]">
+        <i class="calendar outline icon"></i> Termindetails ansehen
+      </a>
+    </div>
+    <ng-template #notVaccinated>
+      <div>Du bist noch zu keiner Impfung angemeldet</div>
 
-  <div *ngIf="user?.vaccination_id != null; else notVaccinated">
-    Du bist bereits zu einer Impfung angemeldet!
-    <p>{{user?.vaccination_id}}</p>
+      <div>
+        <br><br>
+        <a routerLink="../vaccinations" class="ui cfy-button">
+          Impftermine ansehen
+        </a>
+        <a class="ui crayola cfy-button" [routerLink]="['../vaccinations']">
+          <i class="calendar outline icon"></i> Zu den Impfterminen
+        </a>
+      </div>
+    </ng-template>
+
   </div>
-  <ng-template #notVaccinated>
-    <div>Du bist noch zu keiner Impfung angemeldet</div>
+  <ng-template #notLoggedIn>
+    <h2>Willkommen bei Coronify!</h2>
+
+    <div>
+      <br><br>
+      <a routerLink="../vaccinations" class="ui cfy-button">
+        Impftermine ansehen
+      </a>
+    </div>
   </ng-template>
 
-  <div>
-    <br><br>
-    <a routerLink="../vaccinations" class="ui cfy-button">
-      Impftermine ansehen
-    </a>
-  </div>
 </div>
 
 <!--<cfy-vaccination-search (vaccinationSelected)="vaccinationSelected($event)" class="column">
