--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -97,7 +97,7 @@
     </div>
 
     <div>
-      <img src="../assets/img/Safe-cuate.svg" alt="">
+      <img src="../assets/img/corona1.svg" alt="">
     </div>
   </div>
 </div>
