--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ a {
 
 h1,
 .style-h1 {
-  color: var(--main);
+  color: #333 !important;
   font-family: 'Poppins', sans-serif !important;
   font-weight: 700 !important;
   font-size: 35px !important;
@@ -192,4 +192,13 @@ h3,
 
 .black {
   color: #333;
+}
+
+.login {
+  display: flex !important;
+  align-items: center !important;
+}
+
+.field input {
+  margin-bottom: 10px !important;
 }
