6 files modified, 2 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
 -->
 
 <div class="page-container">
-  <div class="ui grid">
-    <div class="three wide column">
+  <div class="ui grid main-grid">
+    <div class="two wide column col">
       <div class="left-column">
         <p class="style-h2">Coronify.</p>
         <div class="ui vertical fluid tabular menu">
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="thirteen wide stretched column">
+    <div class="fourteen wide stretched column col">
       <div class="middle-column">
 
         <div *ngIf="isLoggedIn()" class="username">
