--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -57,6 +57,11 @@
 
     </form>
 
+    <a class="ui cfy-button"
+      [routerLink]="['../locationAdmin']">
+      <i class="write icon"></i> Impftermin bearbeiten
+    </a>
+
   </div>
   <div class="five wide column">
     <img src="../assets/img/corona1.svg" alt="">
