--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -15,7 +15,9 @@
 
         <div class="field">
           <label>Nachname</label>
-          <input type="text" formControlName="lastname">
+          <input *ngIf="this.isUpdatingUser === true; else newUserLastname" disabled type="text" formControlName="lastname">
+          <ng-template #newUserLastname><input type="text" formControlName="lastname"></ng-template>
+
         </div>
 
       </div>
