--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -46,7 +46,7 @@
         <label>Ort</label>
         <select class="ui dropdown" formControlName="location_id">
       <option *ngFor="let location of locations" [value]="location.id">
-      {{location.city}}</option>
+      {{location.name}}, {{location.postalcode}} {{location.city}}</option>
     </select>
       </div>
       <br>
@@ -57,8 +57,7 @@
 
     </form>
 
-    <a class="ui cfy-button"
-      [routerLink]="['../locationAdmin']">
+    <a class="ui cfy-button" [routerLink]="['../locationAdmin']">
       <i class="write icon"></i> Impftermin bearbeiten
     </a>
 
